움직임을 만들었다. 움직임 테스트를 위해 머터리얼과 컴퍼넌트를 가져왔다. Character의 BeginePlay가 호출이 되지 않아서 CharacterManager에 플레이어 오브젝트를 전달 못했었다.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ShooTingGame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ShooTingGameGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Script/ShooTingGame.ShooTingGameGameModeBase
+EditorStartupMap=/Game/Maps/Base_Map.Base_Map
+
