Object관리 및 AddAction방식을 전면적으로 수정하였다.
ObjectManger는 이제 Object를 직접적으로 받는 것이 아니라 정보를 주면 Manger가 직접 Spawn을 하고 Object객체들을 초기화 하면서 관리한다. 그리고 action값을 경우 이제 고유 Id를 가지고 있어야만 Manger에 Action값을 전달할수 있다.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,9 +9,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ShooTingGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ShooTingGame")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ShooTingGameGameModeBase")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ShooTingGameModeBase")
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Script/ShooTingGame.ShooTingGameGameModeBase
+GlobalDefaultGameMode=/Script/ShooTingGame.ShooTingGameModeBase
 EditorStartupMap=/Game/Maps/Base_Map.Base_Map
 
