playder같은 경우 직접적으로 값을 이벤트를 호출하게 만들었다.
키보드 이벤트로 action값을 받아서 event update에서 해당 action값에 이벤트를 실행시키려고 했으나 맴버변수값이 변경이 안되는 것 때문에 키보드 이벤트에서 직접적으로 이벤트를 호출하게 만들었다.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ShooTingGameModeBase")
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Script/ShooTingGame.ShooTingGameModeBase
 EditorStartupMap=/Game/Maps/Base_Map.Base_Map
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Engine/Maps/Entry.Entry
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprint/BP_ShooTingGameModeBase.BP_ShooTingGameModeBase_C
+GlobalDefaultServerGameMode=None
 
