--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="EventA",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="EventX",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +AxisMappings=(AxisName="MoveX",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveX",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="MoveY",Scale=1.000000,Key=Up)
