UMG를 이용해서 인터페이스들을 만들었다
UMG를 이용해서 main화면과 play화면(플레이어의 정보들)에 인터페이스들을 배치하였다. mainlevel과 playlevel을 구분지었다

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ShooTingGameModeBase")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Base_Map.Base_Map
+EditorStartupMap=/Game/Maps/MainMenu_Map.MainMenu_Map
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -21,7 +21,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/Maps/Base_Map.Base_Map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/BP_ShooTingGameModeBase.BP_ShooTingGameModeBase_C
 GlobalDefaultServerGameMode=None
