자잘한 버그들을 고쳤다
FPS가 너무 빨라서 속도를 늦췄고 몬스터들이 맵밖에서 죽을경우 아이템을 떨어트릴때 생기는 버그도 고쳤다

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ShooTingGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ShooTingGame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ShooTingGameModeBase")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/MainMenu_Map.MainMenu_Map
@@ -21,7 +23,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/Base_Map.Base_Map
+GameDefaultMap=/Game/Maps/MainMenu_Map.MainMenu_Map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/BP_ShooTingGameModeBase.BP_ShooTingGameModeBase_C
 GlobalDefaultServerGameMode=None
