--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,8 +79,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="EventA",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
-+ActionMappings=(ActionName="EventX",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
++ActionMappings=(ActionName="KeyboadA",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="KeyboadX",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
 +AxisMappings=(AxisName="LeftRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="LeftRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="UpDown",Scale=1.000000,Key=Up)
